--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ remote_theme: marella/jekyll-theme-documentation
 permalink: pretty
 nav:
   - Home: 
-    - Home: ''
+    - Home: index
  
   - Demos:
     - Markdown: demos/markdown
