--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ remote_theme: marella/jekyll-theme-documentation
 
 permalink: pretty
 nav:
-  - Home: index.md
+  - Home: /
   
   - Demos:
     - Markdown: demos/markdown
